--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -82,14 +82,14 @@
             android:checked="false"
             android:paddingTop="30dp"
             android:paddingBottom="20dp"
-            android:switchMinWidth="200dp"
             android:text="@string/tracking"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textIsSelectable="false"
             android:textSize="16sp"
             android:thumb="@drawable/thumb_selector"
-            android:track="@drawable/track_selector" />
+            app:switchMinWidth="200dp"
+            app:track="@drawable/track_selector" />
 
         <LinearLayout
             android:layout_width="match_parent"
