Update translations from Transifex

--- a/app/src/main/res/values-ru/arrays.xml
+++ b/app/src/main/res/values-ru/arrays.xml
@@ -43,4 +43,13 @@
         <item>другое</item>
     </string-array>
 
+    <string-array name="imageSizeEntries">
+        <item>без изменений</item>
+        <item>800 px</item>
+        <item>1080 px</item>
+        <item>1280 px</item>
+        <item>1920 px</item>
+        <item>другой</item>
+    </string-array>
+
     </resources>
