--- a/app/src/main/res/layout/alert_dialog_title.xml
+++ b/app/src/main/res/layout/alert_dialog_title.xml
@@ -15,8 +15,7 @@
     android:orientation="vertical"
     android:paddingLeft="?attr/dialogPreferredPadding"
     android:paddingRight="?attr/dialogPreferredPadding"
-    android:paddingTop="@dimen/abc_dialog_padding_top_material"
-    tools:ignore="PrivateResource">
+    android:paddingTop="@dimen/abc_dialog_padding_top_material">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,7 +32,7 @@
             android:src="@null"
             tools:ignore="ContentDescription" />
 
-        <androidx.appcompat.widget.DialogTitle
+        <TextView
             android:id="@+id/customTitle"
             style="?android:attr/windowTitleStyle"
             android:layout_width="match_parent"
@@ -41,7 +40,8 @@
             android:ellipsize="end"
             android:singleLine="true"
             android:textAlignment="viewStart"
-            android:gravity="start" />
+            android:gravity="start"
+            tools:text="Preference title" />
     </LinearLayout>
     <TextView
         android:id="@+id/customMessage"
@@ -50,7 +50,8 @@
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="?android:attr/textColorSecondary" />
+        android:textColor="?android:attr/textColorSecondary"
+        tools:text="Message describing preference. Maybe be several lines long."/>
 
 </LinearLayout>
 
