--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="label_font_size">18sp</dimen>
     <dimen name="status_indent">22dp</dimen>
     <dimen name="thumbnail_size">100dp</dimen>
+    <dimen name="dialog_padding_top">18dp</dimen>
 </resources>
