--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -85,7 +85,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
 
-            <net.fabiszewski.ulogger.SwipeSwitch
+            <net.fabiszewski.ulogger.ui.SwipeSwitch
                 android:id="@+id/switchLogger"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
