--- a/app/src/main/res/layout/fragment_self_check.xml
+++ b/app/src/main/res/layout/fragment_self_check.xml
@@ -13,7 +13,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="0dp"
-    tools:context=".SelfCheckFragment">
+    tools:context=".ui.SelfCheckFragment">
 
     <ScrollView
         android:fillViewport="true"
