--- a/app/src/main/res/layout/fragment_waypoint.xml
+++ b/app/src/main/res/layout/fragment_waypoint.xml
@@ -15,7 +15,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="0dp"
-    tools:context=".WaypointFragment">
+    tools:context=".ui.WaypointFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
